syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package v1;

option go_package = "github.com/eduardoraider/go-box/proto/v1;users";

message User {
  int64 id = 1;
  string name = 2;
  string login = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp modified_at = 5;
  google.protobuf.Timestamp last_login = 6;
}

message UserRequest {
  int64 id = 1;
  string name = 2;
  string login = 3;
  string password = 4;
}

message UserResponse {
  string error = 1;
  User user = 2;
}

message ListUserResponse {
  string error = 1;
  repeated User users = 2;
}

service UserService {
  rpc Create(UserRequest) returns (UserResponse);
  rpc Update(UserRequest) returns (UserResponse);
  rpc Delete(UserRequest) returns (UserResponse);
  rpc Get(UserRequest) returns (UserResponse);
  rpc List(google.protobuf.Empty) returns (ListUserResponse);
}